--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -3,6 +3,14 @@
    License: none (public domain)
 */
 
+body {
+	background-color: #FFFEF8;
+}
+
+footer {
+	background-color: rgb(255, 255, 255);
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -58,11 +66,19 @@ header {
 	justify-content: space-between;
 	margin: 50px 0
 }
+
+header a {
+	text-decoration: none;
+}
+
+main {
+	padding: 0 106px;
+}
 section {
 	margin: 50px 0
 }
 
-h1{
+h1 a {
 	display: flex;
 	flex-direction: column;
 	font-family: 'Syne';
@@ -71,11 +87,10 @@ h1{
 	color: #B1663C
 }
 
-h1 > span {
+h1 a > span {
 	font-family: 'Work Sans';
 	font-size:10px;
 	letter-spacing: 0.1em;
-;
 }
 
 h2{
@@ -91,16 +106,25 @@ nav ul {
 
 }
 nav li {
-	padding: 0 10px;
-	font-size: 1.2em;
+	padding-left: 40px;
+	font-size: 16px;
+	font-weight: 300;
+}
+nav li a {
+	color: black;
 }
 
 li:hover {
 	color: #B1663C;
 }
+nav img {
+	height: 19.36px;
+	width: 19.36px;
+}
 #introduction {
 	display: flex;
 	align-items: center;
+	margin-bottom: 100px;
 }
 #introduction figure {
 	flex: 1
@@ -108,7 +132,8 @@ li:hover {
 #introduction img {
 	display: block;
 	margin: auto;
-	width: 80%;
+	width: 85%;
+	margin-left: 0;
 }
 
 #introduction article {
@@ -125,6 +150,48 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+/*FILTRE*/
+.filter {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+	justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+
+.filterCategory {
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+}
+
+.filterChoice {
+    display: flex;
+    flex-direction: row;
+    align-items:center;
+    justify-content: center;
+    white-space: nowrap;
+    overflow:inherit;
+	font-family: 'Syne';
+    width: 35%;
+    height: 30px;
+    border-radius: 50px;
+    border: 2px solid #1D6154;
+	color: #1D6154;
+    font-size: 16px;
+    font-weight: 700;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: 10px;
+}
+
+.filterChoice:hover {
+    background-color: #1D6154;
+	color: #FFFEF8;
+    transition: 0.3s;
+}
+
 .gallery {
 	width: 100%;
 	display: grid;
@@ -156,8 +223,9 @@ margin: auto;
 }
 
 #contact input {
-	height: 50px;
+	height: 35px;
 	font-size: 1.2em;
+	font-size: 14px;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
@@ -180,9 +248,24 @@ input[type="submit"]{
 	border-radius: 60px ;
 }
 
-footer nav ul {
+
+footer {
 	display: flex;
+	align-items: center;
 	justify-content: flex-end;
-	margin: 2em
+	height: 60px;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
 
+footer li {
+	font-family: 'Work Sans';
+	font-style: normal;
+	font-weight: 100;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+footer li a {
+	text-decoration: none;
+}
