--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -157,7 +157,7 @@ nav img {
     align-items: center;
 	justify-content: center;
     padding-top: 30px;
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 
 .filterCategory {
@@ -190,20 +190,25 @@ nav img {
     background-color: #1D6154;
 	color: #FFFEF8;
     transition: 0.3s;
+	cursor: pointer;
 }
-
+/*GALLERY ----------*/
 .gallery {
+	flex: 1;
 	width: 100%;
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: repeat(3, 1fr);
 	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+	grid-row-gap: 10px;
 }
 
 .gallery img {
 	width: 100%;
-
+	height: 413px;
 }
+
+
+
 #contact {
 	width: 50%;
 margin: auto;
