--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -55,7 +55,7 @@ table {
 	border-spacing: 0;
 }
 /** end reset css**/
-body {
+header, main {
 	max-width: 1140px;
 	margin:auto;
 	font-family: 'Work Sans' ;
@@ -64,7 +64,8 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin: auto;
+	padding-top: 40px;
 }
 
 header a {
@@ -149,6 +150,12 @@ nav img {
 #portfolio h2 {
 	text-align: center;
 	margin-bottom: 1em;
+	margin-right: 20px;
+}
+
+.titre {
+	display: flex;
+	justify-content: center;
 }
 /*FILTRE*/
 .filterCategory {
@@ -249,6 +256,9 @@ input[type="submit"]{
 	border-radius: 60px ;
 }
 
+footer ul {
+    margin-right: 80px;
+}
 
 footer {
 	display: flex;
@@ -270,3 +280,63 @@ footer li {
 footer li a {
 	text-decoration: none;
 }
+
+.edition {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.edition div {
+	display:flex ;
+	justify-content: center;
+	align-items: center;
+	background-color: #000000;
+	margin-top: 0;
+	margin-bottom: 0;
+	padding: 15px 0;
+	color: white;
+	gap: 15px;
+	font-size: 16px;
+}
+
+.edition #changement {
+	display: flex;
+	align-items: center;
+    height: 30px;
+    border-radius: 50px;
+    border: none;
+	color: #000000;
+	background-color: white;
+    font-size: 14px;
+    font-weight: 500;
+    padding-left: 20px;
+    padding-right: 20px;
+	
+    margin-left: 10px;
+}
+
+.edition i:hover,
+.edition p:hover,
+.edition #changement:hover {
+	cursor: pointer;
+}
+
+#sedelog {
+	display: none;
+}
+
+.modification i {
+	padding-right: 5px;
+}
+
+.modification {
+	padding-top: 10px;
+	display: flex;
+	
+}
+
+.postlogin {
+	display: none;
+}
+
+
