--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -334,5 +334,65 @@ footer li a {
 	cursor: pointer;
 }
 
+.modification a {
+	text-decoration: none;
+	color: #000000;
+}
+
+/*----------------------MODAL--------------------------*/
+
+.modal {
+	position: fixed;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background :rgba(0, 0, 0, 0.5);
+}
+
+.modal-wrapper {
+	width: 630px;
+	height: auto;
+	background-color: #FFFFFF;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+}
+
+.close {
+	display: flex;
+	justify-content: flex-end;
+	margin-right: -10px;
+	margin-bottom: 30px;
+}
+
+.modal input:hover,
+.close:hover {
+	cursor: pointer;
+}
+
+.contenuModal {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.modal input {
+	width: 237px;
+	height: 36px;
+	font-size: 16px;
+	margin-bottom: 25px;
+}
+
+.modal a {
+	text-decoration: none;
+	color: #D65353;
+}
+
+
+
 
 
