--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -357,9 +357,9 @@ footer li a {
 	width: 630px;
 	height: auto;
 	background-color: #FFFFFF;
-	padding: 20px;
 	display: flex;
 	flex-direction: column;
+	padding: 10px 80px;
 }
 
 .close {
@@ -390,6 +390,25 @@ footer li a {
 .modal a {
 	text-decoration: none;
 	color: #D65353;
+}
+
+.galleryModal {
+	flex: 1;
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+	
+}
+
+.galleryModal img {
+	width: 100%;
+	height: 118.95px;
+}
+
+.galleryModal article {
+	width: 87px;
 }
 
 
