--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -492,7 +492,7 @@ footer li a {
 	margin-bottom: 10px;
 }
 
-.aj-photo .ajouter-photo {
+.aj-photo label {
 	width: 173px;
 	margin-top: 10px;
 	font-size: 14px;
@@ -505,6 +505,16 @@ footer li a {
 	text-align: center;
 	border-radius: 50px ;
 	padding: 10px 0;
+	border: none;
+}
+
+#ajouter-photo {
+	display: none;
+}
+
+
+.aj-photo label:hover {
+	cursor: pointer;
 }
 
 .aj-photo p {
@@ -551,6 +561,7 @@ footer li a {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 	background-color: #FFFFFF;
 	color: #000000;
+	margin-top: 12px;
 }
 
 #titre:hover {
@@ -560,6 +571,7 @@ footer li a {
 #valider {
 	display: flex;
 	align-items: center;
+	justify-content: center;
 	width: 237px;
 	height: 36px;
 	font-size: 14px;
