bug envoie photo et delete

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -576,7 +576,7 @@ footer li a {
     color: black;
 }
 
-#titre, #category {
+#titre, #categorie {
 	width: 450px;
 	height: 51px;
 	text-decoration: none;
